<resources>
    <string name="app_name">Super Mercado</string>
    <string name="home_user">Usuário</string>
    <string name="home_password">Senha</string>
    <string name="home_enter">Entrar</string>
    <string name="purchase_list">Lista de Compras</string>
    <string name="purchase_product_name">Nome do Produto</string>
    <string name="purchase_quantity">Quantidade</string>
    <string name="purchase_cart">Carrinho</string>
    <string name="purchase_category">Categoria</string>
    <string name="purchase_unit">Unidade</string>
    <string name="purchase_add">Adicionar</string>
    <string name="purchase_complete">Completar</string>
    <string name="purchase">Compra</string>
    <string name="purchase_save">Salvar</string>
    <string name="purchase_delete">Excluir</string>
    <string name="purchase_edit">Editar</string>
    <string name="purchase_refresh">Atualizar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_home">Home</string>
    <string name="title_purchase_pending">Pendentes</string>
    <string name="title_purchase_cart">Carrinho</string>
    <string name="message_confirm_purchase_delete">Deseja excluir este item?</string>
    <string name="message_confirm_purchase_complete">Deseja completar a compra?</string>
    <string name="title_message_information">Informação</string>
    <string name="title_message_error">Erro</string>
    <string name="title_message_confirmation">Confirmação</string>
    <string name="user_password_not_filled">Usuário e senha não preenchidos</string>
    <string name="login_error">Erro ao realizar o login</string>
    <string name="purchase_get_error">Erro ao carregar lista</string>
    <string name="purchase_cart_add">Adicionar ao carrinho</string>
    <string name="purchase_cart_delete">Remover do carrinho</string>
    <string name="unknwon_error">Erro desconhecido</string>
    <string name="expired_session">Sessão expirada</string>
</resources>